Revision history for {{$dist->name}}

{{$NEXT}}

5.013     2014-02-08 17:08:16-05:00 America/New_York
        - META.json is now a UTF-8 file, rather than ASCII
        - document the use of filefinders in [PkgVersion], and remove
          filtering out of .t, .pod files; do skip non-text files, though
        - always load modules in "extra tests" like pod-coverage.t
        - PruneCruft also prunes ./fatlib
        - avoid being tricked by statements in __END__ section when looking for
          variable assignments
        - if "dzil install" fails due to exception, it is now propagated
        - provide a better error when terminal encoding can't be determined

5.012     2014-01-15 09:58:00-05:00 America/New_York
        - when handling a multi-line abstract, fold the lines on whitespace;
          previously, the newlines had been left in, which caused downstream
          warnings

5.011     2014-01-12 16:09:29-05:00 America/New_York
        - ->VERSION is again defined in the tester forms of Builder and Minter
        - remove a small obsolete code path from PkgVersion

5.010     2014-01-11 22:06:04-05:00 America/New_York
        - stop sharing a reference to cached PPI docs, which led to spooky
          action at a distance
        - PkgVersion no longer surrounds the new $VERSION assignment with a
          bare block
        - if there's a blank line after the package statement (and any number
          of comment-only lines), PkgVersion will use that for a $VERSION
          assignment, rather than insert a new line; this can be made mandatory
          with die_on_line_insertion

5.009     2014-01-07 20:21:17-05:00 America/New_York
        - include time offset by default in NextRelease
        - always pass PPI octets, not text

5.008     2013-12-27 21:57:02 America/New_York
        - fix utterly broken `dzil run`

5.007     2013-12-27 20:50:45-05:00 America/New_York
        - add the ability to say "dzil run --no-build" to run a command without